# rust-kperf

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: rust.yml
kperf-rs/: Cargo.toml
kperf-rs/src/: error.rs  event.rs  kperf.rs  lib.rs  safe_wrappers.rs
kperf-sys/: Cargo.toml  README.md  build.rs
kperf-sys/.cargo/: config
kperf-sys/src/: constants.rs  functions.rs  lib.rs  structs.rs
kperf-tests/: Cargo.toml  README.md
kperf-tests/src/: main.rs
