[package]
name = "kperf-rs"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Rust safe wrapper over kperf-sys library"
repository = "https://github.com/El-Naizin/rust-kperf/tree/main"
readme = "../README.md"
keywords = ["ffi", "perf", "kperf", "kperfdata"]
categories = ["development-tools::profiling"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kperf-sys = { version = "0.0.3" }
libc = "0.2.150"
